# rr-tools-rs

./: .gitignore  Cargo.toml  KPT CadastralBlock 77 03 0009007.dxf  KVZU Parcel 21 01 010206 115.xml  README.md  build.rs
gui-gtk/: Cargo.toml
gui-gtk/src/: button_with_spinner.rs  callbacks.rs  dialogs.rs  global_stores.rs  gui.rs  lib.rs  macros.rs  main.rs  message.rs  spinner_button.rs  treeview_handle.rs  utility.rs
gui-gtk/src/glade/: #rr-tools-rs.glade#  rr-tools-rs.glade  rr-tools-rs.glade~
rr-tools-lib/: Cargo.toml
rr-tools-lib/src/: geometry.rs  lib.rs  mydxf.rs  rrxml.rs  test.rs
rr-tools-lib/src/geometry/: checks.rs  entities.rs  mod.rs  test.rs  traits.rs
rr-tools-lib/src/mydxf/: mod.rs  test.rs
rr-tools-lib/src/rrxml/: mod.rs  parcel.rs  test.rs
src/: error.rs  lib.rs  macros.rs  main.rs  rr_xml.rs  scripts.rs  test.rs
src/contur_checks/: mod.rs
src/geometry/: entities.rs  mod.rs  point.rs  test.rs
src/geometry/checks/: mod.rs  test.rs
src/geometry/entities/: mod.rs  test.rs
src/geometry/rect/: mod.rs
src/geometry/simple_checks/: mod.rs  test.rs
src/geometry/traits/: mod.rs
src/mydxf/: mod.rs  test.rs
src/mydxf/test/: mod.rs
src/rr_xml/: mod.rs  test.rs
src/rr_xml/geometry/: mod.rs  test.rs
src/rrxml/: mod.rs  test.rs
src/test_files/dxfs/: point.dxf
src/test_files/explanation/: entitiy_intersect_entities_explanation.dxf  entitiy_intersect_entity_explanation.dxf  fig4.dxf
test_xmls/: KPT CadastralBlock 77 03 0009007.xml
url_open/: Cargo.toml
url_open/src/: lib.rs
wix/: main.wxs
(+41 files in other folders)
