[package]
name = "gui-gtk"
version = "0.1.0"
authors = ["Niakr1s <pavel2188@gmail.com>"]
edition = "2018"

[dependencies]
url = "1.7.2"
glib = "^0.7"
pretty_env_logger = "^0.3"
log = "^0.4"
rr-tools-lib = {version = "0.1.0", path = "../rr-tools-lib"}

[dependencies.gtk]
version = "^0.6"
features = ["v3_22", "embed-lgpl-docs"]

[dependencies.gdk]
version = "^0.10"
features = ["embed-lgpl-docs"]